--- a/ShoppingCart.Service/appsettings.json
+++ b/ShoppingCart.Service/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=dbcart.database.windows.net;Initial Catalog=dbcart;Encrypt=True;TrustServerCertificate=False"
+    "DefaultConnection": "Data Source=dbcart.database.windows.net;Initial Catalog=dbcart;Encrypt=True;TrustServerCertificate=False;Connect Timeout=300;"
   },
   "Logging": {
     "LogLevel": {
